transitgateway-v2/cft/tgw-autoscale.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Transit Gateway AutoScalling Perimeter Firewall.
Parameters:
  VPCName:
    Description: Name of the newly created VPC
    Type: String
    MinLength: '6'
    MaxLength: '24'
    Default: panwVPC
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to
    Type: 'AWS::EC2::KeyPair::KeyName'
  AutoscaleFwBootstrapBucketName:
    Description: Bucket name for Internet Gateway bootstrap configuration
    Type: String
  LambdaBucketName:
    Description: Bucket name where lambda scripts reside
    Type: String
  TransitGatewayId:
    Description: Transit Gateway Id
    Type: String
  BootstrapBucket:
    Type: String
    Description: Enter the name S3 Bucket Name containing the Bootstrap files
  username:
    Type: String
    Description: Firewall Username
  password:
    Type: String
    Description: Firewall password
  ASNNumber:
    Type: String
    Description: BGP ASN Number for firewalls
  FWInstanceType:
    Type: String
    Default: m4.xlarge
    AllowedValues:
      - c3.xlarge
      - c3.2xlarge
      - c3.4xlarge
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
      - m3.xlarge
      - m3.2xlarge
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
    Description: Enter the instance type and size for the VM-Series firewall
  FWLicenseType:
    Type: String
    Default: Bundle1
    AllowedValues:
      - Bundle1
      - Bundle2
      - BYOL
    Description: Enter the license type for the Firewall
  NumberOfAZs:
    Description: Total Number of AZs which will be used in this deployment (Min 2
      and Max 4 depending on az availability)
    Type: Number
    MinValue: '2'
    Default: '2'
    MaxValue: '4'
  VpcAzs:
    Type: List<AWS::EC2::AvailabilityZone::Name>
    Description: Enter the list of Availability Zones (Based on Number of AZs above)
  SSHLocation:
    Description: Restrict SSH access to the VM-Series firewall (enter a valid CIDR
      range in the format of x.x.x.x/x)
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid CIDR range in the format of x.x.x.x/x
Conditions:
  CreateSubnet2: !Equals
    - !Ref 'NumberOfAZs'
    - '2'
  CreateSubnet3: !Equals
    - !Ref 'NumberOfAZs'
    - '3'
  CreateSubnet3more: !Or
    - !Equals
      - !Ref 'NumberOfAZs'
      - '3'
    - !Equals
      - !Ref 'NumberOfAZs'
      - '4'
  CreateSubnet4: !Equals
    - !Ref 'NumberOfAZs'
    - '4'
 
Mappings:
  AWSNATAMI:
    us-east-1:
      AMI: ami-b419e7ce
    us-west-2:
      AMI: ami-0b707a72
    us-east-2:
      AMI: ami-021e3167
    us-west-1:
      AMI: ami-004b0f60
    ca-central-1:
      AMI: ami-12d36a76
    eu-west-1:
      AMI: ami-076d5d61
    eu-west-2:
      AMI: ami-0a4c5a6e
    eu-central-1:
      AMI: ami-0469bb6b
    ap-southeast-1:
      AMI: ami-047a3667
    ap-southeast-2:
      AMI: ami-17809174
    ap-northeast-1:
      AMI: ami-10dfc877
    ap-northeast-2:
      AMI: ami-1a1bc474
    ap-south-1:
      AMI: ami-6dc38202
    sa-east-1:
      AMI: ami-54e59738
  AWSRegionToAMI:
    us-east-1:
      AMIID: ami-eca289fb
    us-east-2:
      AMIID: ami-446f3521
    us-west-1:
      AMIID: ami-9fadf8ff
    us-west-2:
      AMIID: ami-7abc111a
    eu-west-1:
      AMIID: ami-a1491ad2
    eu-central-1:
      AMIID: ami-54f5303b
    ap-northeast-1:
      AMIID: ami-9cd57ffd
    ap-southeast-1:
      AMIID: ami-a900a3ca
    ap-southeast-2:
      AMIID: ami-5781be34
  RegionMap:
    us-east-1:
      Subnet0AZ: us-east-1a
      Subnet1AZ: us-east-1b
      Realm: iad
    us-east-2:
      Subnet0AZ: us-east-2a
      Subnet1AZ: us-east-2b
      Realm: cmh
    us-west-2:
      Subnet0AZ: us-west-2a
      Subnet1AZ: us-west-2b
      Realm: pdx
    us-west-1:
      Subnet0AZ: us-west-1a
      Subnet1AZ: us-west-1b
      Realm: sfo
    ca-central-1:
      Subnet0AZ: ca-central-1a
      Subnet1AZ: ca-central-1b
      Realm: yul
    eu-west-1:
      Subnet0AZ: eu-west-1a
      Subnet1AZ: eu-west-1b
      Realm: dub
    eu-west-3:
      Subnet0AZ: eu-west-3a
      Subnet1AZ: eu-west-3b
      Realm: cdg
    eu-west-2:
      Subnet0AZ: eu-west-2a
      Subnet1AZ: eu-west-2b
      Realm: lhr
    eu-central-1:
      Subnet0AZ: eu-central-1a
      Subnet1AZ: eu-central-1b
      Realm: fra
    sa-east-1:
      Subnet0AZ: sa-east-1c
      Subnet1AZ: sa-east-1a
      Realm: gru
    ap-southeast-1:
      Subnet0AZ: ap-southeast-1a
      Subnet1AZ: ap-southeast-1b
      Realm: sin
    ap-southeast-2:
      Subnet0AZ: ap-southeast-2a
      Subnet1AZ: ap-southeast-2b
      Realm: syd
    ap-northeast-1:
      Subnet0AZ: ap-northeast-1a
      Subnet1AZ: ap-northeast-1b
      Realm: nrt
    ap-northeast-2:
      Subnet0AZ: ap-northeast-2a
      Subnet1AZ: ap-northeast-2b
      Realm: icn
    ap-south-1:
      Subnet0AZ: ap-south-1a
      Subnet1AZ: ap-south-1b
      Realm: bom
  UbuntuRegionMap:
    us-west-2:
      AMI: ami-efd0428f
    ap-northeast-1:
      AMI: ami-afb09dc8
    us-west-1:
      AMI: ami-2afbde4a
    ap-northeast-2:
      AMI: ami-66e33108
    ap-southeast-1:
      AMI: ami-8fcc75ec
    ap-southeast-2:
      AMI: ami-96666ff5
    eu-central-1:
      AMI: ami-060cde69
    eu-west-1:
      AMI: ami-bbc542c8
    eu-west-2:
      AMI: ami-f1d7c395
    sa-east-1:
      AMI: ami-4090f22c
    us-east-1:
      AMI: ami-80861296
    us-east-2:
      AMI: ami-618fab04
    ca-central-1:
      AMI: ami-b3d965d7
    ap-south-1:
      AMI: ami-c2ee9dad
  AWSRegionAMIEC2:
    us-east-1:
      Xenial: ami-b46295c9
    us-east-2:
      Xenial: ami-f6cef993
    us-west-1:
      Xenial: ami-c16862a1
    us-west-2:
      Xenial: ami-1c1d9664
    ca-central-1:
      Xenial: ami-919b1cf5
    eu-central-1:
      Xenial: ami-6283ef0d
    eu-west-1:
      Xenial: ami-70054309
    eu-west-2:
      Xenial: ami-be4aaed9
    eu-west-3:
      Xenial: ami-5563d528
    ap-northeast-1:
      Xenial: ami-64612102
    ap-northeast-2:
      Xenial: ami-e546eb8b
    ap-southeast-1:
      Xenial: ami-8f4f05f3
    ap-southeast-2:
      Xenial: ami-ed77b18f
    sa-east-1:
      Xenial: ami-4a733826
  AWSRegionArch2AMI:
    us-east-1:
      Bundle1: ami-ce01c0b3
      Bundle2: ami-bffd3cc2
      BYOL: ami-a2fa3bdf
    us-east-2:
      Bundle1: ami-10f3c575
      Bundle2: ami-9ef3c5fb
      BYOL: ami-11e1d774
    us-west-1:
      Bundle1: ami-235b4f43
      Bundle2: ami-854551e5
      BYOL: ami-a95b4fc9
    us-west-2:
      Bundle1: ami-8a22b3f2
      Bundle2: ami-9a29b8e2
      BYOL: ami-d424b5ac
    ca-central-1:
      Bundle1: ami-dd0582b9
      Bundle2: ami-57048333
      BYOL: ami-64038400
    eu-central-1:
      Bundle1: ami-1bbdd574
      Bundle2: ami-1ebdd571
      BYOL: ami-55bfd73a
    eu-west-1:
      Bundle1: ami-edb0fe94
      Bundle2: ami-1fb1ff66
      BYOL: ami-62b5fb1b
    eu-west-2:
      Bundle1: ami-f46a8d93
      Bundle2: ami-c4688fa3
      BYOL: ami-876a8de0
    ap-southeast-1:
      Bundle1: ami-55bced29
      Bundle2: ami-36bdec4a
      BYOL: ami-27baeb5b
    ap-southeast-2:
      Bundle1: ami-aed112cc
      Bundle2: ami-add013cf
      BYOL: ami-00d61562
    ap-northeast-2:
      Bundle1: ami-4eb81420
      Bundle2: ami-a8bf13c6
      BYOL: ami-49bd1127
    ap-northeast-1:
      Bundle1: ami-39662d5f
      Bundle2: ami-75652e13
      BYOL: ami-57662d31
    ap-south-1:
      Bundle1: ami-d385dcbc
      Bundle2: ami-ee80d981
      BYOL: ami-e780d988
    sa-east-1:
      Bundle1: ami-9e0154f2
      Bundle2: ami-d80653b4
      BYOL: ami-9c0154f0
  CidrBlockMap:
    VpcCidrBlock:
      CidrBlock: 192.168.0.0/16
    MgmtCidrBlock:
      CidrBlockAz1: 192.168.0.0/24
      CidrBlockAz2: 192.168.10.0/24
      CidrBlockAz3: 192.168.20.0/24
      CidrBlockAz4: 192.168.30.0/24
    UntrustCidrBlock:
      CidrBlockAz1: 192.168.1.0/24
      CidrBlockAz2: 192.168.11.0/24
      CidrBlockAz3: 192.168.21.0/24
      CidrBlockAz4: 192.168.31.0/24
    TrustCidrBlock:
      CidrBlockAz1: 192.168.2.0/24
      CidrBlockAz2: 192.168.12.0/24
      CidrBlockAz3: 192.168.22.0/24
      CidrBlockAz4: 192.168.32.0/24
    NatGwCidrBlock:
      CidrBlockAz1: 192.168.100.0/24
      CidrBlockAz2: 192.168.101.0/24
      CidrBlockAz3: 192.168.102.0/24
      CidrBlockAz4: 192.168.103.0/24
    LambdaCidrBlock:
      CidrBlockAz1: 192.168.200.0/24
      CidrBlockAz2: 192.168.201.0/24
      CidrBlockAz3: 192.168.202.0/24
      CidrBlockAz4: 192.168.203.0/24

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: VPC Configuration
        Parameters:
          - VPCName
          - NumberOfAZs
          - VpcAzs
      - Label:
          default: VM-Series firewall Instance configuration
        Parameters:
          - FWInstanceType
          - FWLicenseType
          - username
          - password
          - ASNNumber
          - KeyName
      - Label:
          default: S3 Bucket details
        Parameters:
          - AutoscaleFwBootstrapBucketName
          - LambdaBucketName
    ParameterLabels:
      KeyName:
        default: 'Key pair:'

      AutoscaleFwBootstrapBucketName:
        default: Bootstrap bucket for VM-Series firewalls
      LambdaBucketName:
        default: 'S3 Bucket Name for Lambda Code:'
      KeyPANWFirewall:
        default: 'API Key for Firewall:'
      KeyPANWPanorama:
        default: 'API Key for Panorama:'
      username:
        default: 'Admin username for Firewall in bootstrap:'
      password:
        default: 'Admin password for Firewall im bootstrap'
      VpcAzs:
        default: 'Select  AZs:'

Resources:
  BootstrapRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: BootstrapRolePolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: 's3:ListBucket'
                Resource: !Join 
                  - ''
                  - - 'arn:aws:s3:::'
                    - !Ref BootstrapBucket
              - Effect: Allow
                Action: 's3:GetObject'
                Resource: !Join 
                  - ''
                  - - 'arn:aws:s3:::'
                    - !Ref BootstrapBucket
                    - /*
  BootstrapInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Path: /
      Roles:
        - !Ref BootstrapRole
  LambdaExecutionRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: !Join 
        - '-'
        - - TransitLambdaExecutionRole
          - !Ref 'AWS::StackName'
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
  LambdaExecutionPolicy:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyName: !Join 
        - '-'
        - - TransitLambdaExecutionPolicy
          - !Ref 'AWS::StackName'
      Roles:
        - !Ref LambdaExecutionRole
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: STSAccumRole
            Effect: Allow
            Action:
              - 'sts:AssumeRole'
            Resource:
              - '*'
          - Sid: InvokeLambda
            Effect: Allow
            Action:
              - 'lambda:Invoke'
              - 'lambda:InvokeFunction'
            Resource:
              - '*'
          - Action:
              - 'iam:UpdateAssumeRolePolicy'
              - 'iam:GetRole'
              - 'iam:PassRole'
            Resource:
              - '*'
            Effect: Allow
            Sid: IAMActions
          - Action:
              - 'cloudformation:*'
            Resource:
              - '*'
            Effect: Allow
            Sid: CloudFormationActions
          - Action:
              - 'ec2:*'
            Resource:
              - '*'
            Effect: Allow
            Sid: EC2FullAccess
          - Sid: StateMachineActions
            Effect: Allow
            Action:
              - 'states:ListExecutions'
              - 'states:StartExecution'
            Resource:
              - '*'
          - Sid: DynamoDbActions
            Effect: Allow
            Action:
              - dynamodb:CreateTable
              - dynamodb:DeleteItem
              - dynamodb:DescribeTable
              - dynamodb:GetItem
              - dynamodb:GetRecords
              - dynamodb:ListTables
              - dynamodb:PutItem
              - dynamodb:Query
              - dynamodb:Scan
              - dynamodb:TagResource
              - dynamodb:UpdateItem
              - dynamodb:UpdateTable
            Resource:
              - '*'
          - Sid: Logs
            Effect: Allow
            Action:
              - 'logs:CreateLogGroup'
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
            Resource:
              - '*'
          - Sid: S3Actions
            Effect: Allow
            Action:
              - 's3:GetBucketAcl'
              - 's3:GetBucketLocation'
              - 's3:GetObject'
              - 's3:GetObjectAcl'
              - 's3:ListBucket'
              - 's3:PutObject'
              - 's3:PutObjectAcl'
              - 's3:PutObjectTagging'
              - 's3:DeleteBucket'
              - 's3:DeleteBucketPolicy'
              - 's3:DeleteObject'
            Resource:
              - '*'            


  LambdaENISNSTopic:
    Type: 'AWS::SNS::Topic'
    Properties:
      Subscription:
        - Endpoint: !GetAtt AddENILambda.Arn
          Protocol: lambda
  LambdaENIPermission:
    Type: 'AWS::Lambda::Permission'
    Properties:
      Action: 'lambda:InvokeFunction'
      FunctionName: !GetAtt AddENILambda.Arn
      Principal: sns.amazonaws.com
      SourceArn: !Ref LambdaENISNSTopic

  ASLambdalayer:
    Type: 'AWS::Lambda::LayerVersion'
    Properties:
      CompatibleRuntimes:
        - python3.6
        - python3.7
      Content:
        S3Bucket: !Ref LambdaBucketName
        S3Key: layer.zip
      Description: Autoscale Layer
      LayerName: as-layer
      LicenseInfo: MIT

  BgpTunnelIpPool:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
          - AttributeName: IpSegment
            AttributeType: S
      KeySchema:
        - AttributeName: IpSegment
          KeyType: HASH
      ProvisionedThroughput:
        ReadCapacityUnits: '5'
        WriteCapacityUnits: '5'
      TableName: !Join
        - '-'
        - - BgpTunnelIpPool
          - !Ref 'AWS::StackName'

  AddENILambda:
    Type: 'AWS::Lambda::Function'
    Properties:
      Handler: add_eni.add_eni_lambda_handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Environment:
        Variables:
          lambda_bucket_name: !Ref 'LambdaBucketName'
          config_gw_func: !GetAtt 'ConfigFwLambda.Arn'
      Code:
        S3Bucket: !Ref LambdaBucketName
        S3Key: add_eni.zip
      Runtime: python3.6
      Timeout: '300'

  ConfigFwLambda:
    Type: 'AWS::Lambda::Function'
    Properties:
      Handler: config-fw.config_fw_lambda_handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Environment:
        Variables:
          table_name: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - 'BGPTunnelIPTable'
          tgwId: !Ref 'TransitGatewayId'
          Region: !Ref 'AWS::Region'
          N1Asn: !Ref 'ASNNumber'
          username: !Ref 'username'
          password: !Ref 'password'
      Code:
        S3Bucket: !Ref LambdaBucketName
        S3Key: config-fw.zip
      Runtime: python3.6
      Timeout: '600'
    DependsOn:
      - LambdaExecutionRole

  TGWAutoscaleInitialiseLambda:
    Type: AWS::Lambda::Function
    Properties:
      Description: Creates the BGP Tunnel IP Pool Table
      Handler: createDbTable.createDbtable_lambda_handler
      Role: !GetAtt 'LambdaExecutionRole.Arn'
      Layers:
        - !Ref ASLambdalayer
      Environment:
        Variables:
          table_name: !Join
            - '-'
            - - BgpTunnelIpPool
              - !Ref 'AWS::StackName'
      Code:
        S3Bucket: !Ref 'LambdaBucketName'
        S3Key: 'createDbTable.zip'
      Runtime: python3.6
      Timeout: '150'
    DependsOn:
      - BgpTunnelIpPool

  InitialiseAutoscaleTables:
    Type: AWS::CloudFormation::CustomResource
    DependsOn:
      - VPCSecurityGroup
    Properties:
      ServiceToken: !GetAtt 'TGWAutoscaleInitialiseLambda.Arn'

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap
        - CidrBlockMap
        - VpcCidrBlock
        - CidrBlock
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: MGMT
        - Key: Name
          Value: !Ref 'VPCName'
  LambdaSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '0'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - LambdaCidrBlock
        - CidrBlockAz1
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: LambdaFunction
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - LambdaSubnetAz1
    DependsOn:
      - VPC
  LambdaSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '1'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - LambdaCidrBlock
        - CidrBlockAz2
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: LambdaFunction
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - LambdaSubnetAz2
    DependsOn:
      - VPC
  LambdaSubnetAz3:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet3more
    Properties:
      AvailabilityZone: !Select
        - '2'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - LambdaCidrBlock
        - CidrBlockAz3
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: LambdaFunction
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - LambdaSubnetAz3
    DependsOn:
      - VPC
  LambdaSubnetAz4:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet4
    Properties:
      AvailabilityZone: !Select
        - '3'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - LambdaCidrBlock
        - CidrBlockAz4
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: LambdaFunction
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - LambdaSubnetAz4
    DependsOn:
      - VPC
  LambdaRouteTableAz1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - LambdaRouteTableAz1
    DependsOn:
      - VPC
  LambdaRouteTableAz2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - LambdaRouteTableAz2
    DependsOn:
      - VPC
  LambdaRouteTableAz3:
    Type: AWS::EC2::RouteTable
    Condition: CreateSubnet3more
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - LambdaRouteTableAz3
    DependsOn:
      - VPC
  LambdaRouteTableAz4:
    Type: AWS::EC2::RouteTable
    Condition: CreateSubnet4
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - LambdaRouteTableAz4
    DependsOn:
      - VPC
  NATGWSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '0'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - NatGwCidrBlock
        - CidrBlockAz1
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: NATGW
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - NATGWSubnetAz1
    DependsOn:
      - VPC
  NATGWSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '1'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - NatGwCidrBlock
        - CidrBlockAz2
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: NATGW
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - NATGWSubnetAz2
    DependsOn:
      - VPC
  NATGWSubnetAz3:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet3more
    Properties:
      AvailabilityZone: !Select
        - '2'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - NatGwCidrBlock
        - CidrBlockAz3
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: NATGW
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - NATGWSubnetAz3
    DependsOn:
      - VPC
  NATGWSubnetAz4:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet4
    Properties:
      AvailabilityZone: !Select
        - '3'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - NatGwCidrBlock
        - CidrBlockAz4
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: NATGW
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - NATGWSubnetAz4
    DependsOn:
      - VPC
  EIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: VPC
    DependsOn:
      - VPC
      - GatewayToInternet
      - InternetGateway
  EIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: VPC
    DependsOn:
      - VPC
      - GatewayToInternet
      - InternetGateway
  EIP3:
    Type: AWS::EC2::EIP
    Condition: CreateSubnet3more
    Properties:
      Domain: VPC
    DependsOn:
      - VPC
      - GatewayToInternet
      - InternetGateway
  EIP4:
    Type: AWS::EC2::EIP
    Condition: CreateSubnet4
    Properties:
      Domain: VPC
    DependsOn:
      - VPC
      - GatewayToInternet
      - InternetGateway
  NAT1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'EIP1.AllocationId'
      SubnetId: !Ref 'NATGWSubnetAz1'
    DependsOn:
      - VPC
      - EIP1
      - NATGWSubnetAz1
      - GatewayToInternet
  NAT2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'EIP2.AllocationId'
      SubnetId: !Ref 'NATGWSubnetAz2'
    DependsOn:
      - VPC
      - EIP2
      - NATGWSubnetAz2
      - GatewayToInternet
  NAT3:
    Type: AWS::EC2::NatGateway
    Condition: CreateSubnet3more
    Properties:
      AllocationId: !GetAtt 'EIP3.AllocationId'
      SubnetId: !Ref 'NATGWSubnetAz3'
    DependsOn:
      - VPC
      - EIP3
      - NATGWSubnetAz3
      - GatewayToInternet
  NAT4:
    Type: AWS::EC2::NatGateway
    Condition: CreateSubnet4
    Properties:
      AllocationId: !GetAtt 'EIP4.AllocationId'
      SubnetId: !Ref 'NATGWSubnetAz4'
    DependsOn:
      - VPC
      - EIP4
      - NATGWSubnetAz4
      - GatewayToInternet
  MGMTSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '0'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - MgmtCidrBlock
        - CidrBlockAz1
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: MGMT
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - MGMTSubnetAz1
    DependsOn:
      - VPC
  MGMTSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '1'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - MgmtCidrBlock
        - CidrBlockAz2
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: MGMT
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - MGMTSubnetAz2
    DependsOn:
      - VPC
  MGMTSubnetAz3:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet3more
    Properties:
      AvailabilityZone: !Select
        - '2'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - MgmtCidrBlock
        - CidrBlockAz3
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: MGMT
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - MGMTSubnetAz3
    DependsOn:
      - VPC
  MGMTSubnetAz4:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet4
    Properties:
      AvailabilityZone: !Select
        - '3'
        - !Ref 'VpcAzs'
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - MgmtCidrBlock
        - CidrBlockAz4
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: MGMT
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - MGMTSubnetAz4
    DependsOn:
      - VPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: MGMT
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - InternetGateway
  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
    DependsOn:
      - InternetGateway
  NATGWRouteTableAz1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - NATGWRouteTableAz1
    DependsOn:
      - VPC
  NATGWRouteTableAz2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - NATGWRouteTableAz2
    DependsOn:
      - VPC
  NATGWRouteTableAz3:
    Type: AWS::EC2::RouteTable
    Condition: CreateSubnet3more
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - NATGWRouteTableAz3
    DependsOn:
      - VPC
  NATGWRouteTableAz4:
    Type: AWS::EC2::RouteTable
    Condition: CreateSubnet4
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - NATGWRouteTableAz4
    DependsOn:
      - VPC
  NATGWRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'NATGWRouteTableAz1'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
    DependsOn:
      - NATGWRouteTableAz1
      - GatewayToInternet
  NATGWRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'NATGWRouteTableAz2'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
    DependsOn:
      - NATGWRouteTableAz2
      - GatewayToInternet
  NATGWRoute3:
    Type: AWS::EC2::Route
    Condition: CreateSubnet3more
    Properties:
      RouteTableId: !Ref 'NATGWRouteTableAz3'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
    DependsOn:
      - NATGWRouteTableAz3
      - GatewayToInternet
  NATGWRoute4:
    Type: AWS::EC2::Route
    Condition: CreateSubnet4
    Properties:
      RouteTableId: !Ref 'NATGWRouteTableAz4'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
    DependsOn:
      - NATGWRouteTableAz4
      - GatewayToInternet
  MGMTRouteTableAz1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - MGMTRouteTableAz1
    DependsOn:
      - VPC
  MGMTRouteTableAz2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - MGMTRouteTableAz2
    DependsOn:
      - VPC
  MGMTRouteTableAz3:
    Type: AWS::EC2::RouteTable
    Condition: CreateSubnet3more
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - MGMTRouteTableAz3
    DependsOn:
      - VPC
  MGMTRouteTableAz4:
    Type: AWS::EC2::RouteTable
    Condition: CreateSubnet4
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - MGMTRouteTableAz4
    DependsOn:
      - VPC
  LambdaRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'LambdaRouteTableAz1'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT1'
    DependsOn:
      - NAT1
  LambdaRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'LambdaRouteTableAz2'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT2'
    DependsOn:
      - NAT2
  LambdaRoute3:
    Type: AWS::EC2::Route
    Condition: CreateSubnet3more
    Properties:
      RouteTableId: !Ref 'LambdaRouteTableAz3'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT3'
    DependsOn:
      - NAT3
  LambdaRoute4:
    Type: AWS::EC2::Route
    Condition: CreateSubnet4
    Properties:
      RouteTableId: !Ref 'LambdaRouteTableAz4'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT4'
    DependsOn:
      - NAT4
  MGMTRouteNAT1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'MGMTRouteTableAz1'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT1'
    DependsOn:
      - NAT1
  MGMTRouteNAT2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'MGMTRouteTableAz2'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT2'
    DependsOn:
      - NAT2
  MGMTRouteNAT3:
    Type: AWS::EC2::Route
    Condition: CreateSubnet3more
    Properties:
      RouteTableId: !Ref 'MGMTRouteTableAz3'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT3'
    DependsOn:
      - NAT3
  MGMTRouteNAT4:
    Type: AWS::EC2::Route
    Condition: CreateSubnet4
    Properties:
      RouteTableId: !Ref 'MGMTRouteTableAz4'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT4'
    DependsOn:
      - NAT4
  LambdaSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'LambdaSubnetAz1'
      RouteTableId: !Ref 'LambdaRouteTableAz1'
    DependsOn:
      - LambdaRouteTableAz1
      - LambdaSubnetAz1
  LambdaSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'LambdaSubnetAz2'
      RouteTableId: !Ref 'LambdaRouteTableAz2'
    DependsOn:
      - LambdaRouteTableAz2
      - LambdaSubnetAz2
  LambdaSubnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet3more
    Properties:
      SubnetId: !Ref 'LambdaSubnetAz3'
      RouteTableId: !Ref 'LambdaRouteTableAz3'
    DependsOn:
      - LambdaRouteTableAz3
      - LambdaSubnetAz3
  LambdaSubnetRouteTableAssociation4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet4
    Properties:
      SubnetId: !Ref 'LambdaSubnetAz4'
      RouteTableId: !Ref 'LambdaRouteTableAz4'
    DependsOn:
      - LambdaRouteTableAz4
      - LambdaSubnetAz4
  NAT1SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'NATGWSubnetAz1'
      RouteTableId: !Ref 'NATGWRouteTableAz1'
    DependsOn:
      - NATGWRouteTableAz1
      - NATGWSubnetAz1
  NAT2SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'NATGWSubnetAz2'
      RouteTableId: !Ref 'NATGWRouteTableAz2'
    DependsOn:
      - NATGWRouteTableAz2
      - NATGWSubnetAz2
  NAT3SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet3more
    Properties:
      SubnetId: !Ref 'NATGWSubnetAz3'
      RouteTableId: !Ref 'NATGWRouteTableAz3'
    DependsOn:
      - NATGWRouteTableAz3
      - NATGWSubnetAz3
  NAT4SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet4
    Properties:
      SubnetId: !Ref 'NATGWSubnetAz4'
      RouteTableId: !Ref 'NATGWRouteTableAz4'
    DependsOn:
      - NATGWRouteTableAz4
      - NATGWSubnetAz4
  MGMTSubnetRouteTableAssociationNAT1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'MGMTSubnetAz1'
      RouteTableId: !Ref 'MGMTRouteTableAz1'
    DependsOn:
      - MGMTRouteNAT1
      - MGMTSubnetAz1
  MGMTSubnetRouteTableAssociationNAT2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'MGMTSubnetAz2'
      RouteTableId: !Ref 'MGMTRouteTableAz2'
    DependsOn:
      - MGMTSubnetAz2
  MGMTSubnetRouteTableAssociationNAT3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet3more
    Properties:
      SubnetId: !Ref 'MGMTSubnetAz3'
      RouteTableId: !Ref 'MGMTRouteTableAz3'
    DependsOn:
      - MGMTSubnetAz3
  MGMTSubnetRouteTableAssociationNAT4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet4
    Properties:
      SubnetId: !Ref 'MGMTSubnetAz4'
      RouteTableId: !Ref 'MGMTRouteTableAz4'
    DependsOn:
      - MGMTSubnetAz4
  UNTRUSTSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '0'
        - !Ref 'VpcAzs'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - UntrustCidrBlock
        - CidrBlockAz1
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: UNTRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - UNTRUSTSubnet1
    DependsOn:
      - VPC
  UNTRUSTSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '1'
        - !Ref 'VpcAzs'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - UntrustCidrBlock
        - CidrBlockAz2
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: UNTRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - UNTRUSTSubnet2
    DependsOn:
      - VPC
  UNTRUSTSubnet3:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet3more
    Properties:
      AvailabilityZone: !Select
        - '2'
        - !Ref 'VpcAzs'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - UntrustCidrBlock
        - CidrBlockAz3
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: UNTRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - UNTRUSTSubnet3
    DependsOn:
      - VPC
  UNTRUSTSubnet4:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet4
    Properties:
      AvailabilityZone: !Select
        - '3'
        - !Ref 'VpcAzs'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - UntrustCidrBlock
        - CidrBlockAz4
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: UNTRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - UNTRUSTSubnet4
    DependsOn:
      - VPC
  UNTRUSTRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: UNTRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - UNTRUSTRouteTable
  UNTRUSTRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'UNTRUSTRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
    DependsOn:
      - GatewayToInternet
      - UNTRUSTRouteTable
  UNTRUSTSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'UNTRUSTSubnet1'
      RouteTableId: !Ref 'UNTRUSTRouteTable'
    DependsOn:
      - UNTRUSTRoute
      - UNTRUSTSubnet1
  UNTRUSTSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'UNTRUSTSubnet2'
      RouteTableId: !Ref 'UNTRUSTRouteTable'
    DependsOn:
      - UNTRUSTRoute
      - UNTRUSTSubnet2
  UNTRUSTSubnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet3more
    Properties:
      SubnetId: !Ref 'UNTRUSTSubnet3'
      RouteTableId: !Ref 'UNTRUSTRouteTable'
    DependsOn:
      - UNTRUSTRoute
      - UNTRUSTSubnet3
  UNTRUSTSubnetRouteTableAssociation4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet4
    Properties:
      SubnetId: !Ref 'UNTRUSTSubnet4'
      RouteTableId: !Ref 'UNTRUSTRouteTable'
    DependsOn:
      - UNTRUSTRoute
      - UNTRUSTSubnet4
  TRUSTSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '0'
        - !Ref 'VpcAzs'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - TrustCidrBlock
        - CidrBlockAz1
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: TRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - TRUSTSubnet1
    DependsOn:
      - VPC
      - InternetGateway
  TRUSTSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - '1'
        - !Ref 'VpcAzs'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - TrustCidrBlock
        - CidrBlockAz2
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: TRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - TRUSTSubnet2
    DependsOn:
      - VPC
      - InternetGateway
  TRUSTSubnet3:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet3more
    Properties:
      AvailabilityZone: !Select
        - '2'
        - !Ref 'VpcAzs'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - TrustCidrBlock
        - CidrBlockAz3
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: TRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - TRUSTSubnet3
    DependsOn:
      - VPC
      - InternetGateway
  TRUSTSubnet4:
    Type: AWS::EC2::Subnet
    Condition: CreateSubnet4
    Properties:
      AvailabilityZone: !Select
        - '3'
        - !Ref 'VpcAzs'
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap
        - CidrBlockMap
        - TrustCidrBlock
        - CidrBlockAz4
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: TRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - TRUSTSubnet4
    DependsOn:
      - VPC
      - InternetGateway
  TrustRouteTableAz1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: TRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - TrustRouteTableAz1
    DependsOn:
      - VPC
  TrustRouteTableAz2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: TRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - TrustRouteTableAz2
    DependsOn:
      - VPC
  TrustRouteTableAz3:
    Type: AWS::EC2::RouteTable
    Condition: CreateSubnet3more
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: TRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - TrustRouteTableAz3
    DependsOn:
      - VPC
  TrustRouteTableAz4:
    Type: AWS::EC2::RouteTable
    Condition: CreateSubnet4
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Network
          Value: TRUST
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref 'AWS::StackName'
              - TrustRouteTableAz4
    DependsOn:
      - VPC
  TrustRouteNAT1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'TrustRouteTableAz1'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT1'
    DependsOn:
      - NAT1
  TrustRouteNAT2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'TrustRouteTableAz2'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT2'
    DependsOn:
      - NAT2
  TrustRouteNAT3:
    Type: AWS::EC2::Route
    Condition: CreateSubnet3more
    Properties:
      RouteTableId: !Ref 'TrustRouteTableAz3'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT3'
    DependsOn:
      - NAT3
  TrustRouteNAT4:
    Type: AWS::EC2::Route
    Condition: CreateSubnet4
    Properties:
      RouteTableId: !Ref 'TrustRouteTableAz4'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NAT4'
    DependsOn:
      - NAT4
  TRUSTSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'TRUSTSubnet1'
      RouteTableId: !Ref 'TrustRouteTableAz1'
    DependsOn:
      - TRUSTSubnet1
  TRUSTSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'TRUSTSubnet2'
      RouteTableId: !Ref 'TrustRouteTableAz2'
    DependsOn:
      - TRUSTSubnet2
  TRUSTSubnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet3more
    Properties:
      SubnetId: !Ref 'TRUSTSubnet3'
      RouteTableId: !Ref 'TrustRouteTableAz3'
    DependsOn:
      - TRUSTSubnet3
  TRUSTSubnetRouteTableAssociation4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateSubnet4
    Properties:
      SubnetId: !Ref 'TRUSTSubnet4'
      RouteTableId: !Ref 'TrustRouteTableAz4'
    DependsOn:
      - TRUSTSubnet4
  MgmtSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH to MGMT interface
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - MgmtSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref 'SSHLocation'
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref 'SSHLocation'
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: !FindInMap
            - CidrBlockMap
            - VpcCidrBlock
            - CidrBlock
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !FindInMap
            - CidrBlockMap
            - VpcCidrBlock
            - CidrBlock
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '0.0.0.0/0'  
  UntrustSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Untrust interface
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - UntrustSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '0.0.0.0/0'
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '0.0.0.0/0'
  TrustSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for trust interface
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - TrustSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '0.0.0.0/0'
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '0.0.0.0/0'
  VPCSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for within VPC
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: !Join
            - ''
            - - !Ref 'AWS::StackName'
              - VPCSecurityGroup
      SecurityGroupIngress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '0.0.0.0/0'
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: '0.0.0.0/0'
  SSHSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SSH inbound allowed
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: SSH_ONLY
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
  HTTPSSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: HTTPS inbound allowed
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: HTTPS_ONLY
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
  PAVMAWSPublicSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SG for PA-VM-AWS external interface
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 0.0.0.0/0
    DependsOn: VPC
